tests/spec/emit/snapshots/go_method_value_receiver_hoisted.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:bytes"
  import "go:fmt"
  
  fn make(counter: mut Ref<int>) -> mut Ref<bytes.Buffer> {
    counter.* = counter.* + 1
    bytes.NewBufferString("a\nb\n")
  }
  
  fn use_fn(f: fn(uint8) -> Partial<string, error>) {
    let _ = f(10)
    let _ = f(10)
  }
  
  fn main() {
    let mut count = 0
    use_fn(make(&count).ReadString)
    fmt.Println(count)
  }
---
package main

import (
	"bytes"
	"fmt"
)

func make_(counter *int) *bytes.Buffer {
	*counter++
	return bytes.NewBufferString("a\nb\n")
}

func useFn(f func(uint8) (string, error)) {
	f(10)
	f(10)
}

func main() {
	count := 0
	useFn(make_(&count).ReadString)
	fmt.Println(count)
}
