tests/spec/emit/snapshots/go_multi_return_ret_temp_var_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    let n = strconv.Atoi("42")
    let ret_1 = 7
    fmt.Println(n)
    fmt.Println(ret_1)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	n := lisette.ResultFromPair[int](strconv.Atoi("42"))
	ret_1 := 7
	fmt.Println(n)
	fmt.Println(ret_1)
}
