tests/spec/emit/snapshots/go_multi_return_rhs_uses_shadowed_binding.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:math"
  
  fn main() {
    let x = 1.25
    let (x, y) = math.Modf(x)
    let _ = (x, y)
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"math"
)

func main() {
	x := 1.25
	x_1, y := math.Modf(x)
	_ = lisette.MakeTuple2[float64, float64](x_1, y)
}
