tests/spec/emit/snapshots/go_multi_return_tuple_destructuring_shadow.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:math"
  
  fn main() {
    let x = "hi"
    let _ = x
    let (x, y) = math.Modf(1.25)
    let _ = (x, y)
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"math"
)

func main() {
	x, y := math.Modf(1.25)
	_ = lisette.MakeTuple2[float64, float64](x, y)
}
