tests/spec/emit/snapshots/go_named_map_type_autofill_emits_empty_go_literal.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:net/url"
  
  fn test() -> string {
    let mut v = url.Values{..}
    v.Add("key", "value")
    v.Get("key")
  }
---
package main

import "net/url"

func test() string {
	v := url.Values{}
	v.Add("key", "value")
	return v.Get("key")
}
