tests/spec/emit/snapshots/go_named_scalar_type_autofill_emits_conversion.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:time"
  
  fn test() -> string {
    time.Duration{..}.String()
  }
---
package main

import "time"

func test() string {
	return time.Duration(0).String()
}
