tests/spec/emit/snapshots/go_named_slice_type_autofill_emits_nil_conversion.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:sort"
  
  fn test() -> int {
    sort.StringSlice{..}.Len()
  }
---
package main

import "sort"

func test() int {
	return sort.StringSlice(nil).Len()
}
