tests/spec/emit/snapshots/go_none_for_interface_parameter.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:net/http"
  import "go:fmt"
  
  fn main() {
    let req = http.NewRequest("GET", "https://example.com", None)
    fmt.Println(req)
  }
---
package main

import (
	"errors"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"net/http"
)

func main() {
	ret, ret_1 := http.NewRequest("GET", "https://example.com", nil)
	var req lisette.Result[*http.Request, error]
	if ret_1 != nil {
		req = lisette.MakeResultErr[*http.Request, error](ret_1)
	} else if ret == nil {
		req = lisette.MakeResultErr[*http.Request, error](errors.New("unexpected nil"))
	} else {
		req = lisette.MakeResultOk[*http.Request, error](ret)
	}
	fmt.Println(req)
}
