tests/spec/emit/snapshots/go_nullable_return_discarded.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:html/template"
  
  fn main() {
    let t = template.New("x")
    t.Lookup("y")
  }
---
package main

import "html/template"

func main() {
	t := template.New("x")
	t.Lookup("y")
}
