tests/spec/emit/snapshots/go_nullable_return_in_return_statement.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:flag"
  
  fn get(name: string) -> Option<Ref<flag.Flag>> {
    flag.Lookup(name)
  }
  
  fn main() {
    let _ = get("x");
  }
---
package main

import "flag"

func get(name string) *flag.Flag {
	return flag.Lookup(name)
}

func main() {
	get("x")
}
